force-app/main/default/objects/Order/fields/Finance_Task__c.field-meta.xml
<CustomField>
    <fullName>Finance_Task__c</fullName>
    <label>Finance Task</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Generate Invoice</fullName>
            </value>
            <value>
                <fullName>Confirm Credit Terms</fullName>
            </value>
            <value>
                <fullName>Process Down Payment</fullName>
            </value>
            <value>
                <fullName>Set Up Billing Cycle</fullName>
            </value>
            <value>
                <fullName>Issue Proforma Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>