force-app/main/default/objects/Order/fields/Logistics_Task__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Task__c</fullName>
    <label>Logistics Task</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arrange Transport</fullName>
            </value>
            <value>
                <fullName>Confirm Delivery Slot</fullName>
            </value>
            <value>
                <fullName>Coordinate Last-Mile Delivery</fullName>
            </value>
            <value>
                <fullName>Expedite Shipment</fullName>
            </value>
            <value>
                <fullName>Plan Inbound Receiving</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>