force-app/main/default/objects/Order/fields/QA_Task__c.field-meta.xml
<CustomField>
    <fullName>QA_Task__c</fullName>
    <label>Quality Assurance Task</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Final Product Inspection</fullName>
            </value>
            <value>
                <fullName>Performance Test</fullName>
            </value>
            <value>
                <fullName>Compliance Review</fullName>
            </value>
            <value>
                <fullName>Sample Verification</fullName>
            </value>
            <value>
                <fullName>Pre-Shipment Audit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>