force-app/main/default/objects/Order/recordTypes/Order_Business.recordType-meta.xml
<RecordType>
    <active>true</active>
    <label>Order - Business</label>
    <layoutAssignments>
        <layout>Order-Order Layout</layout>
    </layoutAssignments>
</RecordType>