force-app/main/default/objects/Order/recordTypes/Primary_Orders.recordType-meta.xml
<RecordType>
    <active>true</active>
    <label>Primary Orders</label>
    <layoutAssignments>
        <layout>Order-Order Layout</layout>
    </layoutAssignments>
</RecordType>